add replay recording

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,4 +1,8 @@
 SourceRecord="Source Record"
+Record="Record"
+ReplayBuffer="Replay Buffer"
+Duration="Duration"
+SaveReplay="Save Replay"
 Path="Path"
 FilenameFormatting="Filename Formatting"
 RecFormat="Rec Format"
