add record mode option

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,5 +1,10 @@
 SourceRecord="Source Record"
-Record="Record"
+RecordMode="Record Mode"
+None="None"
+Always="Always"
+Streaming="Streaming"
+Recording="Recording"
+StreamingOrRecording="Streaming or Recording"
 ReplayBuffer="Replay Buffer"
 Duration="Duration"
 SaveReplay="Save Replay"
