add custom rtmp option

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,10 +1,15 @@
 SourceRecord="Source Record"
+Record="Record"
+Stream="Stream"
 RecordMode="Record Mode"
+StreamMode="Stream Mode"
 None="None"
 Always="Always"
 Streaming="Streaming"
 Recording="Recording"
 StreamingOrRecording="Streaming or Recording"
+Server="Server"
+Key="Key"
 ReplayBuffer="Replay Buffer"
 Duration="Duration"
 SaveReplay="Save Replay"
