add enable disable hotkey pair

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -23,3 +23,5 @@ NVENC="NVENC"
 AMD="AMD"
 DifferentAudio="Different Audio"
 Source="Source"
+SourceRecordEnable="Source Record Enable"
+SourceRecordDisable="Source Record Disable"
