add virtual camera as record or stream trigger

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -8,6 +8,7 @@ Always="Always"
 Streaming="Streaming"
 Recording="Recording"
 StreamingOrRecording="Streaming or Recording"
+VirtualCamera="Virtual Camera"
 Server="Server"
 Key="Key"
 ReplayBuffer="Replay Buffer"
