add audio track option

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -26,3 +26,5 @@ DifferentAudio="Different Audio"
 Source="Source"
 SourceRecordEnable="Source Record Enable"
 SourceRecordDisable="Source Record Disable"
+AudioTrack="Audio Track"
+Track="Track"
