--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -28,3 +28,5 @@ SourceRecordEnable="Source Record Enable"
 SourceRecordDisable="Source Record Disable"
 AudioTrack="Audio Track"
 Track="Track"
+Background="Background"
+BackgroundColor="Background Color"
