--- a/data/locale/zh-CN.ini
+++ b/data/locale/zh-CN.ini
@@ -28,3 +28,5 @@ SourceRecordEnable="原记录启用"
 SourceRecordDisable="原纪录关闭"
 AudioTrack="音轨"
 Track="轨道"
+Background="Background"
+BackgroundColor="Background Color"
