--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -28,3 +28,5 @@ SourceRecordEnable="Source Record 有効化"
 SourceRecordDisable="Source Record 無効化"
 AudioTrack="音声トラック"
 Track="トラック"
+Background="背景"
+BackgroundColor="背景色"
