update encoder list

--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -18,10 +18,17 @@ Path="パス"
 FilenameFormatting="ファイル名書式設定"
 RecFormat="録画フォーマット"
 Encoder="エンコーダー"
-Software="ソフトウェア"
-QSV="QSV"
-NVENC="NVENC"
-AMD="AMD"
+Software="ソフトウェア (x264)"
+QSV.H264="ハードウェア (QSV, H.264)"
+QSV.AV1="ハードウェア (QSV, AV1)"
+AMD.H264="ハードウェア (AMD, H.264)"
+AMD.HEVC="ハードウェア (AMD, HEVC)"
+AMD.AV1="ハードウェア (AMD, AV1)"
+NVENC.H264="ハードウェア (NVENC, H.264)"
+NVENC.AV1="ハードウェア (NVENC, AV1)"
+NVENC.HEVC="ハードウェア (NVENC, HEVC)"
+Apple.H264="ハードウェア (Apple, H.264)"
+Apple.HEVC="ハードウェア (Apple, HEVC)"
 DifferentAudio="別の音声"
 Source="ソース"
 SourceRecordEnable="Source Record 有効化"
