--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -18,10 +18,17 @@ Path="Path"
 FilenameFormatting="Filename Formatting"
 RecFormat="Rec Format"
 Encoder="Encoder"
-Software="Software"
-QSV="QSV"
-NVENC="NVENC"
-AMD="AMD"
+Software="Software (x264)"
+QSV.H264="Hardware (QSV, H.264)"
+QSV.AV1="Hardware (QSV, AV1)"
+AMD.H264="Hardware (AMD, H.264)"
+AMD.HEVC="Hardware (AMD, HEVC)"
+AMD.AV1="Hardware (AMD, AV1)"
+NVENC.H264="Hardware (NVENC, H.264)"
+NVENC.AV1="Hardware (NVENC, AV1)"
+NVENC.HEVC="Hardware (NVENC, HEVC)"
+Apple.H264="Hardware (Apple, H.264)"
+Apple.HEVC="Hardware (Apple, HEVC)"
 DifferentAudio="Different Audio"
 Source="Source"
 SourceRecordEnable="Source Record Enable"
