--- a/data/locale/zh-CN.ini
+++ b/data/locale/zh-CN.ini
@@ -18,10 +18,17 @@ Path="储存路径"
 FilenameFormatting="文件命名格式"
 RecFormat="文件储存格式"
 Encoder="编码器"
-Software="软件"
-QSV="QSV"
-NVENC="NVENC"
-AMD="AMD"
+Software="软件（x264）"
+QSV.H264="硬件（QSV，H.264）"
+QSV.AV1="硬件（QSV，AV1）"
+AMD.H264="硬件（AMD，H.264）"
+AMD.HEVC="硬件（AMD，HEVC）"
+AMD.AV1="硬件（AMD，AV1）"
+NVENC.H264="硬件（NVENC，H.264）"
+NVENC.AV1="硬件 (NVENC, AV1)"
+NVENC.HEVC="硬件 (NVENC，HEVC)"
+Apple.H264="硬件（苹果，H.264）"
+Apple.HEVC="硬件（苹果，HEVC）"
 DifferentAudio="不同的音频"
 Source="源"
 SourceRecordEnable="原记录启用"
