--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -1,7 +1,7 @@
 SourceRecord="Source Record"
-Record="Record"
+Record="Aufnahme"
 Stream="Stream"
-RecordMode="Record Mode"
+RecordMode="Aufnahme Modus"
 StreamMode="Stream Modus"
 None="Keine"
 Always="Immer"
