Add other source records to source record properties

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -38,3 +38,4 @@ Track="Track"
 Background="Background"
 BackgroundColor="Background Color"
 MaxSeconds="Maximum Seconds"
+OtherSourceRecords="Other Source Records"
