Add missing translations

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -39,3 +39,6 @@ Background="Background"
 BackgroundColor="Background Color"
 MaxSeconds="Maximum Seconds"
 OtherSourceRecords="Other Source Records"
+Scale="Scale"
+Resolution="Resolution"
+Framerate="Framerate"
