--- a/data/locale/zh-CN.ini
+++ b/data/locale/zh-CN.ini
@@ -31,7 +31,14 @@ Apple.H264="硬件（苹果，H.264）"
 Apple.HEVC="硬件（苹果，HEVC）"
 DifferentAudio="不同的音频"
 Source="源"
-SourceRecordEnable="原记录启用"
-SourceRecordDisable="原纪录关闭"
+SourceRecordEnable="源记录启用"
+SourceRecordDisable="源记录关闭"
 AudioTrack="音轨"
 Track="轨道"
+Background="背景"
+BackgroundColor="背景颜色"
+MaxSeconds="最大秒数"
+OtherSourceRecords="其他源记录"
+Scale="缩放"
+Resolution="分辨率"
+Framerate="帧率"
