--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -18,6 +18,8 @@ Path="Path"
 FilenameFormatting="Filename Formatting"
 RecFormat="Rec Format"
 Encoder="Encoder"
+AudioEncoder="Audio Encoder"
+VideoEncoder="Video Encoder"
 Software="Software (x264)"
 QSV.H264="Hardware (QSV, H.264)"
 QSV.AV1="Hardware (QSV, AV1)"
