Add option for all audio tracks

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -4,6 +4,7 @@ Stream="Stream"
 RecordMode="Record Mode"
 StreamMode="Stream Mode"
 None="None"
+All="All"
 Always="Always"
 Streaming="Streaming"
 Recording="Recording"
